force-app/main/default/objects/FINS_Data_Cloud_Mock__c/FINS_Data_Cloud_Mock__c.object-meta.xml
<CustomObject>
    <description>This custom object provides internal users with the ability to control local, on-platform data attributes that would otherwise have been returned from Data Cloud. These attributes are injected into various FSC features thereby allowing users to demo the features without the need to provision an actual DC instance, and/ or have it return data from a connected source.</description>
    <label>Data Cloud Mock</label>
    <nameField>
        <displayFormat>DCM-{00000000}</displayFormat>
        <label>Data Cloud Mock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Cloud Mocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>