force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Average_Monthly_Expenditure_Cover__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Expenditure_Cover__c</fullName>
    <description>Number of months that expenses can be paid from available balances.</description>
    <label>Average Monthly Expenditure Cover</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>