force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Average_Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Expenses__c</fullName>
    <formula>Total_Expense__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Monthly Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>