force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DataCloud_Mockeries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>