force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Credit_Card_Use_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Use_Ratio__c</fullName>
    <description>Ratio of credit used to credit available across all cards.</description>
    <label>Credit Card Use Ratio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>