force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Deposits_for_1_year__c.field-meta.xml
<CustomField>
    <fullName>Deposits_for_1_year__c</fullName>
    <description>Total / average deposits for the past 1 year, starting from the last day of the previous month.</description>
    <label>Deposits for 1 year</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>