force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Expenses_for_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Expenses_for_1_Year__c</fullName>
    <description>Total / average expenses for the past 1 year, starting from the last day of the previous month.</description>
    <label>Expenses for 1 Year</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>