force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Financial_Account_Balance_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Balance_Net_Worth__c</fullName>
    <description>Sum of financial account balances including both managed and held away, less the total outstanding credit.</description>
    <label>Financial Account Balance Net Worth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>