force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Held_Away_Financial_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Held_Away_Financial_Account_Balance__c</fullName>
    <description>Sum of all Financial Account balances of type General, Investment, Savings, and Checking that are held away.</description>
    <label>Held Away Financial Account Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>