force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Large_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Large_Deposit__c</fullName>
    <description>Deposit that is 2 standard deviation larger than an average deposit.</description>
    <label>Large Deposit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>