force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Large_Expense__c.field-meta.xml
<CustomField>
    <fullName>Large_Expense__c</fullName>
    <description>Expense that is 2 standard deviation larger than an average expense.</description>
    <label>Large Expense</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>