force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Managed_Financial_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Managed_Financial_Account_Balance__c</fullName>
    <description>Sum of all Financial Account balances of type General, Investment, Savings, and Checking under management.</description>
    <label>Managed Financial Account Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>