force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Monthly_Deposits_by_Category__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Deposits_by_Category__c</fullName>
    <description>The sum of all monthly inflow transactions sorted by merchant category code.</description>
    <label>Monthly Deposits by Category</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>