force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Monthly_Expenses_by_Category__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses_by_Category__c</fullName>
    <description>Sum of all debit transactions broken down by category for the calendar month.</description>
    <label>Monthly Expenses by Category</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>