force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Monthly_Inflow_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Inflow_Transactions__c</fullName>
    <description>The sum of all monthly inflow transactions.</description>
    <label>Monthly Inflow Transactions</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>