force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Percentage_of_Assets_to_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Assets_to_Liabilities__c</fullName>
    <description>Total assets divided by total liabilities.</description>
    <label>Percentage of Assets to Liabilities</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>