force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Annual_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Expenses__c</fullName>
    <description>The sum of all outgoing transactions year to date.</description>
    <label>Total Annual Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>