force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Expenses_by_Month_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_by_Month_Last_12_Months__c</fullName>
    <description>The total of each financial account’s outgoing transactions by month for the last 12 months.</description>
    <label>Total Expenses by Month Last 12 Months</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>