force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expenses__c</fullName>
    <description>The sum of all monthly outgoing transactions.</description>
    <label>Total Monthly Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>