force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Accounts__c</fullName>
    <description>Number of financial accounts held by the customer.</description>
    <label>Total Number of Accounts</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>