force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Outstanding_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Credit__c</fullName>
    <description>Total of all credit and lending product balances.</description>
    <label>Total Outstanding Credit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>