force-app/main/default/objects/FINS_Data_Cloud_Mock__c/fields/Total_Surplus__c.field-meta.xml
<CustomField>
    <fullName>Total_Surplus__c</fullName>
    <formula>Total_Income__c - Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surplus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>