force-app/main/default/objects/FINS_Data_Cloud_Mock__c/recordTypes/Calculated_Insights.recordType-meta.xml
<RecordType>
    <fullName>Calculated_Insights</fullName>
    <active>true</active>
    <label>Calculated Insights</label>
</RecordType>