force-app/main/default/objects/FINS_Data_Cloud_Mock__c/recordTypes/Cashflow.recordType-meta.xml
<RecordType>
    <fullName>Cashflow</fullName>
    <active>true</active>
    <label>Cashflow</label>
</RecordType>